# firefighting_robot

./: CMakeLists.txt  README.md  package.xml
config/: diffbot_controllers.yaml  drive_bot.rviz  joystick.yaml  my_controllers.yaml  view_bot.rviz
description/: SolidworksDesign.xacro  gazebo_control.xacro  lidar.xacro  material.xacro  robot.urdf.xacro  robot2.xacro  robot_core.xacro  robot_final_urdf.urdf  ros2_control.xacro  urdf3.urdf
description/urdf/: lidar.xacro  robot2.xacro  ros2_control.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/firefighting_robot/share/firefighting_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/firefighting_robot/share/firefighting_robot/cmake/: firefighting_robotConfig-version.cmake  firefighting_robotConfig.cmake
install/firefighting_robot/share/firefighting_robot/config/: empty.yaml
install/firefighting_robot/share/firefighting_robot/description/: robot.urdf.xacro  robot_core.xacro
install/firefighting_robot/share/firefighting_robot/environment/: ament_prefix_path.dsv  path.dsv
install/firefighting_robot/share/firefighting_robot/launch/: rsp.launch.py
launch/: controller_manager.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  rsp.launch.py
log/: latest_build
meshes/: back_left_wheel.STL  back_right_wheel.STL  base_link.STL  front_left_wheel.STL  front_right_wheel.STL
worlds/: obstacles.world
(+3 files in other folders)
